--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/msaari102/FS_osa8#readme",
   "dependencies": {
     "apollo-server": "^3.6.7",
+    "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
+    "mongoose": "^6.3.0",
     "uuid": "^8.3.2"
   }
 }
