--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,17 @@
   },
   "homepage": "https://github.com/msaari102/FS_osa8#readme",
   "dependencies": {
+    "@graphql-tools/schema": "^8.3.10",
     "apollo-server": "^3.6.7",
+    "apollo-server-core": "^3.6.7",
+    "apollo-server-express": "^3.6.7",
     "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "graphql": "^16.3.0",
+    "graphql-subscriptions": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
+    "subscriptions-transport-ws": "^0.11.0",
     "uuid": "^8.3.2"
   }
 }
